--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
   {
+    .zegar
+    {
+    text-align: center;
+    }
+    
+  {
   font-family: 'Lato', sans-serif;
 }
 
@@ -95,5 +101,6 @@ body, html {height: 100%}
   </div>
 </div>
 
+    <script id="zegar" type = "text/javascript" src = "//www.deszczowce.pl/skrypty/odliczanie/odliczanie.php?size=28&text=pozosta%C5%82o+do+%3Cb%3Ezako%C5%84czenia%3C%2Fb%3E%21&y=2020&transparent=1&m=5&d=8&min=0&h=7&s=0&theme=czarny&note=0&mode=0"></script>
 </body>
 </html>
