--- a/index.html
+++ b/index.html
@@ -69,16 +69,26 @@ body, html {height: 100%}
 }
 </style>
 <head>
-  <div id="myNav" class="overlay">
+ <!-- The overlay -->
+<div id="myNav" class="overlay">
+
+  <!-- Button to close the overlay navigation -->
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+  <!-- Overlay content -->
   <div class="overlay-content">
-    <a href="#">Informacje</a>
-    <a href="#">Usługi</a>
-    <a href="#">Kontakt</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
+
+</div>
+
+<!-- Use any element to open/show the overlay navigation menu -->
+<span onclick="openNav()">☰</span>
   </div>
 </div>
-</div>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰</span>
   </head>
   <body>
 
