--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@ function closeNav() {
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="#">Informacje</a>
+    <a href="#">Usługi</a>
+    <a href="#">Kontakt</a>
   </div>
 </div>
 
