--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ function closeNav() {
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
 <span style="font-size:30px;cursor:pointer;margin-left:10px;" onclick="openNav()">&#9776; </span>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <h1 class="w3-jumbo w3-animate-top">Wkrótce</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">99 days left</p>
+    <p class="w3-large w3-center">27 dni do końca</p>
   </div>
 </div>
 
