--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function closeNav() {
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-    <a href="#">Informacje</a>
+    <a href="Informacje.html">Informacje</a>
     <a href="#">Usługi</a>
     <a href="#">Kontakt</a>
   </div>
