--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+
 <html lang="pl">
+
 <head>
-  <meta charset="UTF-8>
-  <title>Wiktor Styczeń</title>
+
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Wiktor Styczeń</title>
+
+    <link rel="stylesheet" href="wiktorstyczen.github.io/main.css">
+
 </head>
 
+<span class="loader"><span class="loader-inner"></span></span>
+
 <body>
+    
+    
 
 </body>
 
