--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Wiktor Styczeń</title>
 
-    <link rel="stylesheet" type="text/css" href="https://github.com/wiktorstyczen/wiktorstyczen.github.io/main.css">
+    <link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/main.css">
 
 </head>
 
