--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 
 </head>
 
+<div class="loader-wrapper">
 <span class="loader"><span class="loader-inner"></span></span>
+</div>
+    
+    <script>
+        $(window).on("load",function(){
+            $("loader-wrapper").fadeOut("slow");
+        });
+    </script>
 
 <body>
     
