--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
+  body{
+  background-image: url("w3schools.com/w3images/forestbridge.jpg");
+  }
 </style>
 </head>
 <body>
