--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {height: 100%}
   background-size: cover;
 }
   body{
-  background-image: url("w3schools.com/w3images/forestbridge.jpg");
+  background-image: url("https://www.w3schools.com/w3images/forestbridge.jpg");
   }
 </style>
 </head>
