--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url("w3schools.com/w3images/forestbridge.jpg");
+  background-image: url("/forestbridge.jpg");
   min-height: 100%;
   background-position: center;
   background-size: cover;
 }
-  body{
-  background-image: url("https://www.w3schools.com/w3images/forestbridge.jpg");
-  }
 </style>
 </head>
 <body>
