--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <link rel = "stylesheet" href = "wiktorstyczen.github.io/style.css"
+    <link rel="stylesheet" type="text/css" href ="https://wiktorstyczen.github.io/style.css">
   </head>
   <body>
     <div class="form-container">
