--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href ="https://wiktorstyczen.github.io/style.css">
+    <link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css"
   </head>
   <body>
-    <div class="form-container">
-      <form action="#">
-        <h1>Login</h1>
-        <input type="text" placeholder="Username">
-        <input type="password" placeholder="Password">
-        <input type="submit" value="Submit">
-      </form>
+    <div class="container">
+      <div class="weather-card">
+        <h1>Weather</h1>
+        <p id="city"></p>
+        <p id="temperature"></p>
+        <p id="description"></p>
+      </div>
     </div>
+
+    <script src="https://wiktorstyczen.github.io/scp.jss">
   </body>
-    </html>
+</html>
