--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       </div>
     </div>
 
-    <script src="https://wiktorstyczen.github.io/scp.jss">
+    <script src="https://wiktorstyczen.github.io/scp.jss"></script>
   </body>
 </html>
