--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css"
+    <link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css">
   </head>
   <body>
     <div class="container">
@@ -10,9 +10,8 @@
         <p id="city"></p>
         <p id="temperature"></p>
         <p id="description"></p>
+        <script src="https://wiktorstyczen.github.io/scp.jss"></script>
       </div>
     </div>
-
-    <script src="https://wiktorstyczen.github.io/scp.jss"></script>
   </body>
 </html>
