--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p id="city"></p>
         <p id="temperature"></p>
         <p id="description"></p>
-        <script src="https://wiktorstyczen.github.io/scp.jss"></script>
+        <script src="https://wiktorstyczen.github.io/scp.js"></script>
       </div>
     </div>
   </body>
