--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="container">
         <div class="weather-card">
           <h1>Weather</h1>
-          <p id="city"></p>
-          <p id="temperature"></p>
+          <p id="Miasto"></p>
+          <p id="Temperatura"></p>
           <p id="description"></p>
 
           <script src="https://wiktorstyczen.github.io/scp.js"></script>
