--- a/index.html
+++ b/index.html
@@ -1,63 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head>
-  
-      <link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css">
-  
-      <style>
-              .form-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-      form {
-        background-color: #f2f2f2;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px #ccc;
-        width: 400px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      input[type="text"],
-      input[type="password"] {
-        padding: 10px;
-        margin-top: 20px;
-        width: 100%;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-      }
-      input[type="submit"] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        border: none;
-        margin-top: 20px;
-        cursor: pointer;
-      }
-      h1 {
-        margin-bottom: 20px;
-      }
-      </style>
-    </head>
-  
-    <body>
 
-    
-      <div class="container">
-        <div class="weather-card">
-          <h1>Weather</h1>
-          <p id="Miasto"></p>
-          <p id="Temperatura"></p>
-          <p id="description"></p>
+<html lang="pl">
 
-          <script src="https://wiktorstyczen.github.io/scp.js"></script>
-        </div>
-      </div>
-      </body>
+<head>
+
+<title> Portofolio </title>
+
+<link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.com/style.css">
+
+</head>
+
+<body>
+
+<h1></h1>
+<p></p>
+
+</body>
+
+<footer>
+  &copy Wiktor Styczeń 2023
+</footer>
+
 </html>
