--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title> Portofolio </title>
 
-<link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.com/style.css">
+<link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css">
 
 </head>
 
