--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1></h1>
+<iframe src="https://discord.com/widget?id=1075122611329179659&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <p></p>
 
 </body>
