--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 
+<nav>
+
+  <a href="http://">Homepage</a>
+  <a href="http://">Projects</a>
+  <a href="http://">Gallery</a>
+  <a href="http://">Contact</a>
+
+</nav>
+
 <body>
 
 <h1></h1>
