--- a/index.html
+++ b/index.html
@@ -1,37 +1,97 @@
 <!DOCTYPE html>
-
 <html lang="pl">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lakiernia Samochodowa XYZ</title>
+    <style>
+        /* Resetowanie domyślnych stylów przeglądarek */
+        body, h1, p {
+            margin: 0;
+            padding: 0;
+        }
 
-<title> Portofolio </title>
+        /* Stylizacja nagłówka */
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
 
-<link rel="stylesheet" type="text/css" href="https://wiktorstyczen.github.io/style.css">
+        h1 {
+            font-size: 36px;
+            text-transform: uppercase;
+        }
 
+        /* Stylizacja sekcji o nas */
+        .about-us {
+            background-color: #f0f0f0;
+            padding: 30px;
+        }
+
+        /* Stylizacja tekstu w sekcji o nas */
+        .about-us p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        /* Stylizacja sekcji usług */
+        .services {
+            padding: 40px 0;
+        }
+
+        .service {
+            text-align: center;
+            margin: 0 auto;
+            max-width: 300px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+        }
+
+        .service h2 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        /* Stylizacja stopki */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
-
-<nav id="menu">
-
-  <a href="http://">Homepage</a>
-  <a href="http://">Projects</a>
-  <a href="http://">Gallery</a>
-  <a href="http://">Contact</a>
-
-</nav>
-
 <body>
+    <header>
+        <h1>Lakiernia Samochodowa XYZ</h1>
+        <p>Najlepsza jakość usług lakierniczych dla Twojego samochodu</p>
+    </header>
 
-<h1></h1>
+    <section class="about-us">
+        <h2>O nas</h2>
+        <p>Nasza lakiernia samochodowa specjalizuje się w profesjonalnym malowaniu i naprawach powłok lakierowych. Mamy wieloletnie doświadczenie w branży i korzystamy tylko z najwyższej jakości materiałów.</p>
+    </section>
 
-<div id = "discord">
-  <iframe src="https://discord.com/widget?id=1075122611329179659&theme=dark" width="250" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-</div>
-<p></p>
+    <section class="services">
+        <div class="service">
+            <h2>Malowanie</h2>
+            <p>Malujemy samochody w dowolnym kolorze i stylu, dostosowanym do Twoich preferencji.</p>
+        </div>
+        <div class="service">
+            <h2>Naprawy powłok</h2>
+            <p>Profesjonalnie naprawiamy wszelkie uszkodzenia powłok lakierowych, w tym rysy i odpryski.</p>
+        </div>
+        <div class="service">
+            <h2>Restauracje</h2>
+            <p>Przywracamy blask i świeżość lakieru na starych samochodach, realizując kompleksowe prace restauracyjne.</p>
+        </div>
+    </section>
 
+    <footer>
+        <p>Kontakt: info@lakierniaxyz.pl | Telefon: (123) 456-7890</p>
+    </footer>
 </body>
-
-<footer>
-  &copy Wiktor Styczeń 2023
-</footer>
-
 </html>
